[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "rh-bridge"
version = "0.0.1"
authors = [
  { name="Clemens Famulla-Conrad", email="devel@clemix.de" },
]
description = "Simple TCP <-> Serial bridge -- used with RotorHazard FPV timer"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "GPLv3"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/clemix-fpv/rh-bridge"
Issues = "https://github.com/clemix-fpv/rh-bridge/issues"
